--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,10 +19,7 @@
                 <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
-                <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
-                </ul>
+                <p style="text-transform: uppercase;">{{ page.description }}</p>
             </div>
         </div>
     </section>
@@ -32,20 +29,6 @@
 
         <!-- One -->
         {% include tiles.html %}
-
-        <!-- Two -->
-        <section id="two">
-            <div class="inner">
-                <header class="major">
-                    <h2>Massa libero</h2>
-                </header>
-                <p>{{ content }}</p>
-                <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
-                </ul>
-            </div>
-        </section>
-
     </div>
 
     {% include footer.html %}
