--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,20 +11,26 @@
 
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links">
+    <ul class="links">
         {% for page in site.pages %}
-		    {% if page.layout == "home" %}
-		        <li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
-	    	{% endif %}
-		{% endfor %}
-		{% for page in site.pages %}
-		    {% if page.layout != "home" and page.nav-menu == true %}
-		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
-		    {% endif %}
-		{% endfor %}
-	</ul>
-	<ul class="actions vertical">
-		<li><a href="#" class="button special fit">Get Started</a></li>
-		<li><a href="#" class="button fit">Log In</a></li>
-	</ul>
+        {% if page.layout == "home" %}
+        <li><a href="{{ "" | absolute_url }}/">{{ page.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% for page in site.pages %}
+        {% if page.title == "Publications" %}
+        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% for page in site.pages %}
+        {% if page.title == "Recent Papers" %}
+        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% for page in site.pages %}
+        {% if page.title == "Blog" %}
+        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+        {% endif %}
+        {% endfor %}
+    </ul>
 </nav>
