--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -18,18 +18,23 @@
 
       <!-- One -->
       <section id="one">
-	<div class="inner">
-          {% for post in site.posts %}
-	  {% if post.title != 404 %}
-	  <header class="major">
-	    <h1>{{ post.title }}</h1>
-	  </header>
-	  {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
-	  {% if post.date %}<p>{{ post.date }}</p>{% endif %}
-	  <p>{{ post.content }}</p>
-	  {% endif %}
-          {% endfor %}
-	</div>
+          <div class="inner">
+              <ol class="posts">
+                  {% for post in site.posts %}
+                  <li>
+                      <a href="{{ post.url1 }}">{{ post.title }}</a> &raquo;
+                      {% if post.author1 == "Pallavi Bhat" %}<b><i><span>{{ post.author1}}</span></i></b>  {% endif %}
+                      {% if post.author1 != "Pallavi Bhat" and post.author1 != ""%}<i><span>{{ post.author1}}</span></i>  {% endif %}
+                      {% if post.author2 == "Pallavi Bhat" %}<b><i><span>, {{ post.author2}}</span></i></b>  {% endif %}
+                      {% if post.author2 != "Pallavi Bhat" and post.author2 != "NA"%}<i><span>, {{ post.author2}}</span></i>  {% endif %}
+                      {% if post.author3 == "Pallavi Bhat" %}<b><i><span>, {{ post.author3}}</span></i></b>  {% endif %}
+                      {% if post.author3 != "Pallavi Bhat" and post.author3 != "NA"%}<i><span>, {{ post.author3}}</span></i>  {% endif %}
+                      {% if post.author4 == "Pallavi Bhat" %}<b><i><span>, {{ post.author4}}</span></i></b>  {% endif %}
+                      {% if post.author4 != "Pallavi Bhat" and post.author4 != "NA"%}<i><span>, {{ post.author4}}</span></i>  {% endif %}
+                  </li>
+                  {% endfor %}
+              </ol>
+          </div>
       </section>
 
     </div>
