--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -15,6 +15,19 @@
 
     {% if site.tiles-source == 'pages' %}
     {% for page in site.pages %}
+    {% if page.title == "Research" %}
+    <article>
+        <span class="image">
+            <img src="{{ page.image }}" alt="" />
+        </span>
+        <header class="major">
+            <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
+            <p>{{ page.description }}</p>
+        </header>
+    </article>
+    {% endif %}
+    {% endfor %}
+    {% for page in site.pages %}
     {% if page.title == "Publications" %}
     <article>
         <span class="image">
@@ -28,20 +41,7 @@
     {% endif %}
     {% endfor %}
     {% for page in site.pages %}
-    {% if page.title == "Recent Papers" %}
-    <article>
-        <span class="image">
-            <img src="{{ page.image }}" alt="" />
-        </span>
-        <header class="major">
-            <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
-            <p>{{ page.description }}</p>
-        </header>
-    </article>
-    {% endif %}
-    {% endfor %}
-    {% for page in site.pages %}
-    {% if page.title == "Blog" %}
+    {% if page.title == "Art" %}
     <article>
         <span class="image">
             <img src="{{ page.image }}" alt="" />
