--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,5 +32,10 @@
         <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
         {% endif %}
         {% endfor %}
+        {% for page in site.pages %}
+        {% if page.title == "Brief Bio-Data" %}
+        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
+        {% endif %}
+        {% endfor %}
     </ul>
 </nav>
