--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -53,5 +53,18 @@
     </article>
     {% endif %}
     {% endfor %}
+    {% for page in site.pages %}
+    {% if page.title == "Brief Bio-Data" %}
+    <article>
+        <span class="image">
+            <img src="{{ page.image }}" alt="" />
+        </span>
+        <header class="major">
+            <h3><a href="{{ page.url | relative_url  }}" class="link">{{ page.title }}</a></h3>
+            <p>{{ page.description }}</p>
+        </header>
+    </article>
+    {% endif %}
+    {% endfor %}
     {% endif %}
 </section>
