--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,34 +1,14 @@
-<!-- Contact -->
-<section id="contact">
-    <div class="inner">
-        <section>
-            <section>
-                <div class="contact-method">
-                    <span class="icon alt fa-envelope"></span>
-                    <h3>Email</h3>
-                    <a href="#">{{ site.email }}</a>
-                </div>
-            </section>
-        </section>
-        <section class="split">
-            <section>
-                <div class="contact-method">
-                    <span class="icon alt fa-phone"></span>
-                    <h3>Phone</h3>
-                    <span>{{ site.phone }}</span>
-                </div>
-            </section>
-        </section>
-    </div>
-</section>
-
 <!-- Footer -->
-	<footer id="footer">
-			<ul class="copyright">
-				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
-				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
-			</ul>
-	</footer>
+<footer id="footer">
+    <br />
+    <span class="icon alt fa-envelope"> Email</span>
+    <br />
+    <a href="#">{{ site.email }}</a>, <a href="#">{{ site.email1 }}</a>
+    <ul class="copyright">
+        <li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+        <li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
+    </ul>
+</footer>
 
 <!-- Scripts -->
 	<script src="{{ "assets/js/jquery.min.js" | absolute_url }}"></script>
