--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
                 <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ page.description }}</p>
+                <p style="text-transform: uppercase;"><span style="color:khaki">{{ page.description }}</span> {{ page.description1 }}</p>
             </div>
         </div>
     </section>
