--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
 <footer id="footer">
     <br />
-    <span class="icon alt fa-envelope"> Email</span>
-    <br />
+    <span style="padding-left:10px; color:khaki" class="icon alt fa-envelope"> Email: </span>
     <a href="#">{{ site.email }}</a>, <a href="#">{{ site.email1 }}</a>
-    <ul class="copyright">
+    <br /><br />
+    <ul style="text-align:center" class="copyright">
         <li>&copy; {{ site.title }} {{ site.subtitle }}</li>
         <li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
     </ul>
