--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,9 @@
     <!-- Banner -->
     <section id="banner" class="major">
         <div class="inner">
-            <header class="major">
-                <h1>{{ page.landing-title }}</h1>
-            </header>
+                <h1 style="margin-bottom:0">{{ page.landing-title }}</h1>
             <div class="content">
-                <p style="text-transform: uppercase;"><span style="color:khaki">{{ page.description }}</span> {{ page.description1 }}</p>
+                <p style="text-transform: uppercase;margin-left:1em"><span style="color:khaki">{{ page.description }}</span><br /> Department of applied math<br />university of leeds</p>
             </div>
         </div>
     </section>
