--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -12,8 +12,8 @@
     @include vendor('display', 'flex');
     @include padding(4em, 0, (2em, 0, 0, 0));
     background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
+    background-position: center 35%;
+    background-repeat:no-repeat;
     background-size: cover;
     border-bottom: 0 !important;
     cursor: default;
@@ -33,7 +33,7 @@
         display: block;
         height: 100%;
         left: 0;
-        opacity: 0.85;
+        opacity: 0.50;
         position: absolute;
         top: 0;
         width: 100%;
