--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
         <div class="inner">
                 <h1 style="margin-bottom:0">{{ page.landing-title }}</h1>
             <div class="content">
-                <p style="text-transform: uppercase;"><span style="color:khaki">{{ page.description }}</span><br /> Department of applied math <br />university of leeds</p>
+                <p style="text-transform: uppercase;"><span style="color:khaki">{{ page.description }}</span><br /> International Centre for Theoretical Sciences <br />India</p>
             </div>
         </div>
     </section>
